[GStreamer] media/media-continues-playing-after-replace-source.html fails https://bugs.webkit.org/show_bug.cgi?id=86310

Reviewed by Eric Carlson.

Source/WebCore:

Reset the player's network and ready states, this allows the media
player client to potentially emit a timeupdate event while the new
location is being loaded. States are synchronized again after the
pipeline pre-rolled.

No new tests but fixes
media/media-continues-playing-after-replace-source.html

* platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::load):

LayoutTests:

Unflag now passing media test on GTK and EFL.

* platform/efl/TestExpectations:
* platform/gtk/TestExpectations:

Canonical link: https://commits.webkit.org/111353@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@125045 268f45cc-cd09-0410-ab3c-d52691b4dbfc